Created core and moved colors to ui-kit